Fix for page jump on refresh/paging, common host list

--- a/client/src/styles/entitlements/_views.scss
+++ b/client/src/styles/entitlements/_views.scss
@@ -96,6 +96,10 @@
   }
 
   .list-group-item-container {
+    display: flex;
+    align-items: stretch;
+    flex-direction: row;
+
     .container-fluid {
       padding-right: 40px;
       .dropdown.btn-group {
@@ -111,6 +115,17 @@
     .pager {
       margin-top: 0;
       margin-bottom: 10px;
+    }
+
+    .host-results {
+      width: 100%;
+    }
+
+    .hidden-results {
+      opacity: 0;
+      span {
+        white-space: nowrap;
+      }
     }
 
     .host-list {
